@@ -65,6 +65,9 @@ Broker:
   preferred websockets implementation.
 - Add support for X-Forwarded-For header for built in websockets.
 - Report persistence stats when starting.
+- $SYS updates are now aligned to `sys_interval` seconds, meaning that if set
+  to 10, for example, updates will be sent at times matching x0 seconds.
+  Previously update intervals were aligned to the time the broker was started.
 
 Plugins / plugin interface:
 - Add persist-sqlite plugin.
